--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ img {
 .product {
   display: flex;
   flex-direction: column;
-
+  background-color: palegoldenrod;
   border: 1px solid black;
   margin: 1.5rem;
   padding: 1rem;
