--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,14 @@
 }
 .from-Container {
   position: absolute;
-  top: 100;
-  margin-top: 50px;
+  margin-top: 100px;
   width: 50vh;
   background-color: aliceblue;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 20px;
+  border-radius: 5px;
 }
 input {
   padding: 5px;
@@ -45,11 +45,11 @@ li {
 }
 .numBtn {
   background: none;
-  border: none;
-  border-bottom: 1px solid black;
-  padding: 0.2rem;
+  border: 1px solid black;
+  padding: 0.3rem;
   margin-left: 0.1rem;
   margin-right: 0.1rem;
+  border-radius: 50%;
 }
 .numBtn:hover {
   background-color: lightgray;
@@ -57,11 +57,12 @@ li {
 }
 .cardBtn {
   width: 4rem;
-  padding: 0.1rem;
+  padding: 0.2rem;
   margin: 0.1rem;
   border: none;
   background-color: lightslategrey;
   color: azure;
+  border-radius: 5px;
 }
 .cardBtn:hover {
   background-color: rgb(99, 112, 125);
